Closed Bug 103006 Opened 24 years ago Closed 24 years ago

gtk gfx leaks static regions on shutdown

Categories

(Core :: Layout, defect)

x86
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: dbaron, Assigned: dbaron)

Details

Attachments

(1 file)

gtk gfx leaks static regions on shutdown
Comment on attachment 51960 [details] [diff] [review] patch r=/me
Attachment #51960 - Flags: review+
Comment on attachment 51960 [details] [diff] [review] patch sr=blizzard
Attachment #51960 - Flags: superreview+
Checked in 2001-10-17 20:24 PDT.
Status: NEW → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: