Fix shutdown leaks of static regions.  r=jag  sr=blizzard  b=103006